--- a/appsettings.json
+++ b/appsettings.json
@@ -1,14 +1,13 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-
-
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=usersdb;Trusted_Connection=True;"
-    },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=usersdb;Trusted_Connection=True;",
+    "LearnPracticeContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LearnPractice;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
